--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -1,19 +1,28 @@
 plugins {
-    id 'java'
+    id 'org.openjfx.javafxplugin' // plugin bereits geladen, hier nur aktivieren
 }
 
-group 'de.mi'
-version '1.0-SNAPSHOT'
+application {
+    mainClass = "${group}.${project.name.toLowerCase()}.Main"
+}
 
-repositories {
-    mavenCentral()
+jar {
+    manifest {
+        attributes(
+                'Main-Class': application.mainClassName
+        )
+    }
+}
+
+javafx {
+    version = '17'
+    modules = ['javafx.controls', 'javafx.graphics', 'javafx.base']
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
+    implementation "jakarta.ws.rs:jakarta.ws.rs-api:${restVersion}"
+    implementation "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
+    implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
+    implementation "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
+    implementation project(':Common')
 }
