--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -1,19 +1,21 @@
-plugins {
-    id 'java'
+application {
+    mainClass  = "${group}.${project.name.toLowerCase()}.Main"
 }
 
-group 'de.mi'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+jar {
+    manifest {
+        attributes(
+                'Main-Class': application.mainClassName
+        )
+    }
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
+    implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
+    implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
+    implementation "org.glassfish.grizzly:grizzly-http-server:${grizzlyVersion}"
+    implementation "org.glassfish.grizzly:grizzly-websockets:${grizzlyVersion}"
+    implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:${jerseyVersion}"
+    implementation "org.glassfish.jaxb:jaxb-runtime:4.0.0"
+    implementation project(':Common')
 }
