--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -20,6 +20,8 @@ javafx {
 }
 
 dependencies {
+    //noinspection VulnerableLibrariesLocal
+    implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jacksonVersion}"
     implementation "jakarta.ws.rs:jakarta.ws.rs-api:${restVersion}"
     implementation "org.glassfish.jersey.core:jersey-client:${jerseyVersion}"
     implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
