--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -13,11 +13,13 @@ jar {
 dependencies {
     //noinspection VulnerableLibrariesLocal
     implementation "mysql:mysql-connector-java:${jdbcVersion}"
+    //noinspection VulnerableLibrariesLocal
+    implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jacksonVersion}"
     implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
     implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
     implementation "org.glassfish.grizzly:grizzly-http-server:${grizzlyVersion}"
     implementation "org.glassfish.grizzly:grizzly-websockets:${grizzlyVersion}"
     implementation "org.glassfish.jersey.containers:jersey-container-grizzly2-http:${jerseyVersion}"
-    implementation "org.glassfish.jaxb:jaxb-runtime:4.0.0"
+    implementation "org.glassfish.jaxb:jaxb-runtime:${jaxbVersion}"
     implementation project(':Common')
 }
