--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -16,7 +16,7 @@ jar {
 
 javafx {
     version = '17'
-    modules = ['javafx.controls', 'javafx.graphics', 'javafx.base']
+    modules = ['javafx.controls', 'javafx.fxml']
 }
 
 dependencies {
