--- a/Other/build.gradle
+++ b/Other/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(':Common')
+    implementation project(':Server')
     implementation 'com.github.javafaker:javafaker:1.0.2'
 }
