--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -12,6 +12,7 @@ jar {
                 'Main-Class': application.mainClassName
         )
     }
+    from { compileJava.classpath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
 javafx {
